<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color"
    tools:context=".HealthFragment">

    <TextView
        android:id="@+id/tvHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/cHealth"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/textPrimary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weightLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/weightLable"
        android:textColor="@color/textPrimary"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/weightValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHealth" />

    <TextView
        android:id="@+id/weightValue"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/weightValue"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightLabel" />

    <TextView
        android:id="@+id/heightLabel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="41dp"
        android:fontFamily="@font/roboto_mono_bold"
        android:text="@string/heightLabel"
        android:textColor="@color/textPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heightValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/heightValue"
        android:textColor="@color/textPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/weightValue"
        app:layout_constraintTop_toBottomOf="@+id/heightLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/roboto_mono"
        android:text="@string/bmi"
        android:textColor="@color/textPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightValue" />

</androidx.constraintlayout.widget.ConstraintLayout>